# rpi-mask

./: .envrc  .gitignore  .gitmodules  README.md  docker-entrypoint.sh  dockerfile  pyproject.toml  requirements.txt  rpi-project.md
config/: alsa.conf  pip.conf
install_script/: install.sh
project/: example.sh  sample.sh
src/: demo1.py
src/GoogleAssistant/: pushtotalk-lab.py  pushtotalk.py
src/SpeechRecognition/: demo1.py  gussing_game.py  tts_with_alexa.py  tts_with_google.py
src/adafruit/: app.py
tools/: actions-onoff.json
windows/: compile.ps1
