[tool.poetry]
name = "assistant-sdk-python"
version = "0.1.0"
description = ""
authors = ["ChihChia_Wang"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
google-auth-oauthlib = {extras = ["tool"], version = "^0.4.2"}
grpcio = "^1.34.0"
tenacity = "^6.3.1"
google-assistant-grpc = "^0.3.0"
google-assistant-sdk = "^0.6.0"
adafruit-io = "^2.5.0"
SpeechRecognition = "^3.8.1"
PyAudio = "^0.2.11"
gTTS = "^2.2.2"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
